--- a/src/main/resources/CompileUI.fxml
+++ b/src/main/resources/CompileUI.fxml
@@ -1,25 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
-<?import javafx.stage.*?>
-
-<Stage title="Epic Mcfunction compiler" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.function.main.CompileUIController">
-   <!--icons>
-       <Image url="/images/icon.png"/>
-   </icons-->
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.Scene?>
+<?import javafx.scene.text.Font?>
+<?import javafx.stage.Stage?>
+<Stage title="Epic Mcfunction compiler" xmlns="http://javafx.com/javafx/10.0.2-internal"
+       xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.function.main.CompileUIController">
+    <icons>
+        <Image url="/icon.png"/>
+    </icons>
     <scene>
-       <Scene>
-           <SplitPane fx:id="splitPane" dividerPositions="0.5, 1.0" orientation="VERTICAL">
-               <VBox prefHeight="200.0" prefWidth="560.0" style="-fx-alignment: center;">
-                   <Label mouseTransparent="true" text="Very Epic Compiler">
-                       <font>
-                           <Font size="20.0" />
-                       </font>
-                   </Label>
-                   <HBox maxWidth="1.7976931348623157E308" prefHeight="29.0" prefWidth="200.0" style="-fx-alignment: center;">
+        <Scene>
+            <SplitPane fx:id="splitPane" dividerPositions="0.5, 1.0" orientation="VERTICAL">
+                <VBox prefHeight="200.0" prefWidth="560.0" style="-fx-alignment: center;">
+                    <Label mouseTransparent="true" text="Very Epic Compiler">
+                        <font>
+                            <Font size="20.0"/>
+                        </font>
+                    </Label>
+                    <HBox maxWidth="1.7976931348623157E308" prefHeight="29.0" prefWidth="200.0"
+                          style="-fx-alignment: center;">
                        <TextField fx:id="textField" editable="false" focusTraversable="false" maxWidth="1.7976931348623157E308" mouseTransparent="true" prefHeight="25.0" prefWidth="516.0" />
                        <Button mnemonicParsing="false" onAction="#onOpenDirectory" text="..." />
                    </HBox>
